Added Bonus Validation Question

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -28,6 +28,7 @@
                 <div class="mb-3">
                     <label for="Name">Please give your name: </label>
                     <input type="text" name="Name" class="form-control">
+                    <span asp-validation-for="Name" class="text-danger"></span>
                 </div>
                 <input type="submit" value="Submit" class="btn btn-info">
             </form>
